# BotKinobot

./: CMakeLists.txt  TOKEN_name.py  cached_data.db  main.py  requirements.txt
key/: 6HN92uiYrknG3ygzN4V2dl1Jwi5qfldASfpQ40wxyoQ
static/: styles.css
templates/: film_page.html  index.html  index_2.html  not_found.html
